--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^5.1.0",
     "fs-extra": "^11.3.2",
     "multer": "^2.0.2",
+    "puppeteer": "^24.26.1",
     "socket.io": "^4.8.1",
     "uuid": "^13.0.0"
   }
